fixed overflow in personal section

--- a/src/style.css
+++ b/src/style.css
@@ -516,14 +516,13 @@ html {
         height: 85%;
         padding: 2.5%;
         text-align: center;
-        font-size: 2rem;
+        font-size: 1rem;
         grid-column: 2 / 3;
-
         display: grid;
         grid-template-rows: 5rem auto;
         place-items: center;
         p {
-            font-size: 1.5rem;
+            font-size: 1rem;
             text-align: center;
         }
     }
